[package]
name = "comp4300-a2"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# USE THIS INSTEAD WHEN RELEASING
# [dependencies]
# bevy = "0.12"

[dependencies]
bevy = { version = "0.12.0", features = ["dynamic_linking"] }
bevy_common_assets = {version = "0.8.0", features = ["ron"]}
bevy_framepace = "0.14.1"
bevy_rand = { version = "0.4.0", features = ["wyrand"] }
rand_core = "0.6.4"
serde = { version = "1", features = ["derive"] }

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3
